crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__multiple_backslash_continuation.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(&source)
---
## Tokens
```
[
    If 0..2,
    True 3..7,
    Colon 7..8,
    Newline 8..9,
    Indent 9..13,
    Int 13..14,
    Newline 14..15,
    Int 55..56,
    Newline 56..57,
    Dedent 57..57,
]
```
