crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__nested_t_and_fstring.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 2..6 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 6..7,
    FStringStart 7..9 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 9..13 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 13..14,
    Identifier 14..15,
    Plus 16..17,
    TStringStart 18..20 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 20..21,
    Identifier 21..24,
    Rbrace 24..25,
    TStringEnd 25..26 (flags = DOUBLE_QUOTES | T_STRING),
    Rbrace 26..27,
    FStringEnd 27..28 (flags = DOUBLE_QUOTES | F_STRING),
    Rbrace 28..29,
    TStringMiddle 29..33 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 33..34 (flags = DOUBLE_QUOTES | T_STRING),
    FStringStart 35..37 (flags = F_STRING),
    FStringMiddle 37..41 (flags = F_STRING),
    Lbrace 41..42,
    TStringStart 42..44 (flags = T_STRING),
    TStringMiddle 44..47 (flags = T_STRING),
    TStringEnd 47..48 (flags = T_STRING),
    Exclamation 48..49,
    Identifier 49..50,
    Rbrace 50..51,
    FStringMiddle 51..57 (flags = F_STRING),
    Lbrace 57..58,
    FStringStart 58..60 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 60..67 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 67..68 (flags = DOUBLE_QUOTES | F_STRING),
    Rbrace 68..69,
    FStringEnd 69..70 (flags = F_STRING),
    Newline 70..70,
]
```
