crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__numbers.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    Int 0..4,
    Int 5..9,
    Int 10..16,
    Int 17..18,
    Int 19..22,
    Int 23..36,
    Float 37..40,
    Float 41..45,
    Float 46..51,
    Complex 52..54,
    Complex 55..59,
    Float 60..65,
    Complex 66..72,
    Int 73..109,
    Complex 110..147,
    Int 148..151,
    Int 152..170,
    Int 171..205,
    Newline 205..205,
]
```
