crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__string.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        String,
        0..8,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        String,
        9..17,
    ),
    (
        String,
        18..26,
    ),
    (
        String,
        27..33,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        String,
        34..42,
    ),
    (
        String,
        43..47,
    ),
    (
        String,
        48..56,
        TokenFlags(
            RAW_STRING_LOWERCASE,
        ),
    ),
    (
        String,
        57..63,
    ),
    (
        String,
        64..73,
    ),
    (
        Newline,
        73..73,
    ),
]
```
